[gd_scene load_steps=12 format=3 uid="uid://dqiqkjkeqkakk"]

[ext_resource type="Texture2D" uid="uid://v03kt4bxoy3n" path="res://Assets/stirring.jpg" id="1_rgwja"]
[ext_resource type="Script" uid="uid://bopk50cfesp2d" path="res://Scenes/Methods/agitation.gd" id="1_yijso"]
[ext_resource type="Script" uid="uid://b65tfhyejbr41" path="res://Scenes/Methods/agitationslot1.gd" id="2_fug7k"]
[ext_resource type="Script" uid="uid://bci3qr825nfi2" path="res://Scenes/Methods/agitationslot2.gd" id="3_t1agf"]
[ext_resource type="Texture2D" uid="uid://bqgryoompxxqe" path="res://Assets/infobutton.png" id="5_1e3g1"]
[ext_resource type="Texture2D" uid="uid://bffnfwo6xxpjt" path="res://Assets/combinebutton.png" id="6_fxxva"]
[ext_resource type="AudioStream" uid="uid://dqy12qmcib80d" path="res://Assets/Sounds/stir.wav" id="7_ur11e"]
[ext_resource type="AudioStream" uid="uid://bmty0pek5hg6l" path="res://Assets/Sounds/Retro FootStep Grass 01.wav" id="8_ww7hs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yijso"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1e3g1"]
size = Vector2(64, 64)

[sub_resource type="LabelSettings" id="LabelSettings_yijso"]
font_size = 23

[node name="Agitation" type="Node2D"]
script = ExtResource("1_yijso")

[node name="AgitationButton" type="TextureButton" parent="."]
offset_left = -65.0
offset_top = -65.0
offset_right = 160.0
offset_bottom = 160.0
scale = Vector2(0.6, 0.6)
toggle_mode = true
texture_normal = ExtResource("1_rgwja")

[node name="Crafting Slots" type="Node2D" parent="."]

[node name="Slot 1" type="StaticBody2D" parent="Crafting Slots" groups=["CanBeDroppable", "Droppable"]]
position = Vector2(-125, 0)
script = ExtResource("2_fug7k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crafting Slots/Slot 1"]
shape = SubResource("RectangleShape2D_yijso")

[node name="ColorRect" type="ColorRect" parent="Crafting Slots/Slot 1"]
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
color = Color(0.637843, 0.637843, 0.637843, 1)

[node name="Slot 2" type="StaticBody2D" parent="Crafting Slots" groups=["CanBeDroppable", "Droppable"]]
position = Vector2(130, 0)
script = ExtResource("3_t1agf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crafting Slots/Slot 2"]
shape = SubResource("RectangleShape2D_yijso")

[node name="ColorRect" type="ColorRect" parent="Crafting Slots/Slot 2"]
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
color = Color(0.637843, 0.637843, 0.637843, 1)

[node name="Detectors" type="Node2D" parent="Crafting Slots"]

[node name="AgiSlot1Detector" type="Area2D" parent="Crafting Slots/Detectors"]
position = Vector2(-125, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crafting Slots/Detectors/AgiSlot1Detector"]
shape = SubResource("RectangleShape2D_1e3g1")

[node name="AgiSlot2Detector" type="Area2D" parent="Crafting Slots/Detectors"]
position = Vector2(130, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crafting Slots/Detectors/AgiSlot2Detector"]
shape = SubResource("RectangleShape2D_1e3g1")

[node name="AgitationLabel" type="Label" parent="."]
offset_left = -61.0
offset_top = -99.0
offset_right = 40.0
offset_bottom = -67.0
text = "Agitation"
label_settings = SubResource("LabelSettings_yijso")

[node name="InfoButton" type="TextureButton" parent="."]
offset_left = 45.0
offset_top = -96.0
offset_right = 95.0
offset_bottom = -46.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("5_1e3g1")
texture_pressed = ExtResource("5_1e3g1")

[node name="CombineButton" type="TextureButton" parent="."]
offset_left = -65.0
offset_top = 77.0
offset_right = 160.0
offset_bottom = 127.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("6_fxxva")

[node name="Sounds" type="Node" parent="."]

[node name="Stir" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7_ur11e")

[node name="Open" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_ww7hs")

[connection signal="toggled" from="AgitationButton" to="." method="_on_agitation_button_toggled"]
[connection signal="mouse_entered" from="Crafting Slots/Slot 1" to="." method="_on_static_body_2d_mouse_entered"]
[connection signal="mouse_exited" from="Crafting Slots/Slot 1" to="." method="_on_static_body_2d_mouse_exited"]
[connection signal="mouse_entered" from="Crafting Slots/Slot 2" to="." method="_on_static_body_2d_mouse_entered"]
[connection signal="mouse_exited" from="Crafting Slots/Slot 2" to="." method="_on_static_body_2d_mouse_exited"]
[connection signal="area_entered" from="Crafting Slots/Detectors/AgiSlot1Detector" to="." method="_on_agi_slot_1_detector_area_entered"]
[connection signal="area_exited" from="Crafting Slots/Detectors/AgiSlot1Detector" to="." method="_on_agi_slot_1_detector_area_exited"]
[connection signal="area_entered" from="Crafting Slots/Detectors/AgiSlot2Detector" to="." method="_on_agi_slot_2_detector_area_entered"]
[connection signal="area_exited" from="Crafting Slots/Detectors/AgiSlot2Detector" to="." method="_on_agi_slot_2_detector_area_exited"]
[connection signal="pressed" from="CombineButton" to="." method="_on_combine_button_pressed"]
